crates/pawdoku/tests/snapshots/snapshots__tests__snapshot_the_board_played_to_the_end.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: render_board(&played_to_the_end())
---
status: Solved
full: true
consistent: true
can undo: false
can redo: false

digits
534678912
672195348
198342567
859761423
426853791
713924856
961537284
287419635
345286179

givens
53..7....
6..195...
.98....6.
8...6...3
4..8.3..1
7...2...6
.6....28.
...419..5
....8..79

conflicts
.........
.........
.........
.........
.........
.........
.........
.........
.........

notes
none

moves
1: place 4 at row 1, column 3
2: place 6 at row 1, column 4
3: place 8 at row 1, column 6
4: place 9 at row 1, column 7
5: place 1 at row 1, column 8
6: place 2 at row 1, column 9
7: place 7 at row 2, column 2
8: place 2 at row 2, column 3
9: place 3 at row 2, column 7
10: place 4 at row 2, column 8
11: place 8 at row 2, column 9
12: place 1 at row 3, column 1
13: place 3 at row 3, column 4
14: place 4 at row 3, column 5
15: place 2 at row 3, column 6
16: place 5 at row 3, column 7
17: place 7 at row 3, column 9
18: place 5 at row 4, column 2
19: place 9 at row 4, column 3
20: place 7 at row 4, column 4
21: place 1 at row 4, column 6
22: place 4 at row 4, column 7
23: place 2 at row 4, column 8
24: place 2 at row 5, column 2
25: place 6 at row 5, column 3
26: place 5 at row 5, column 5
27: place 7 at row 5, column 7
28: place 9 at row 5, column 8
29: place 1 at row 6, column 2
30: place 3 at row 6, column 3
31: place 9 at row 6, column 4
32: place 4 at row 6, column 6
33: place 8 at row 6, column 7
34: place 5 at row 6, column 8
35: place 9 at row 7, column 1
36: place 1 at row 7, column 3
37: place 5 at row 7, column 4
38: place 3 at row 7, column 5
39: place 7 at row 7, column 6
40: place 4 at row 7, column 9
41: place 2 at row 8, column 1
42: place 8 at row 8, column 2
43: place 7 at row 8, column 3
44: place 6 at row 8, column 7
45: place 3 at row 8, column 8
46: place 3 at row 9, column 1
47: place 4 at row 9, column 2
48: place 5 at row 9, column 3
49: place 2 at row 9, column 4
50: place 6 at row 9, column 6
51: place 1 at row 9, column 7

checks
none
