crates/pawdoku/tests/snapshots/snapshots__tests__snapshot_the_puzzle_seed_zero_gives_in_tier_4.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: "render_generated(Tier::Four)"
---
tier 4, seed 0

givens
.......51
31.......
......76.
84.......
.....9..5
.9346....
....5..9.
98527..3.
724693518

solution
269738451
317546829
458912763
841325976
672189345
593467182
136854297
985271634
724693518

31 givens; the tier's range is 28 to 31
