crates/pawdoku/tests/snapshots/snapshots__tests__snapshot_the_puzzle_seed_zero_gives_in_tier_5.snap
---
source: crates/pawdoku/tests/snapshots.rs
expression: "render_generated(Tier::Five)"
---
tier 5, seed 0

givens
.........
........9
.....2763
..1......
..2..9.45
..3.6.18.
.3..54...
.85.7.6..
.2..93518

solution
269738451
317546829
458912763
841325976
672189345
593467182
136854297
985271634
724693518

27 givens; the tier's range is 22 to 27
